--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Download Thingy Here</h1>
+<p>We could have the mods list be downloaded from a website.</p>
 </body>
 </html>
